--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  tarantool-cutit:
-    container_name: tournament-cutit
+  tournament:
+    container_name: tournament
     restart: always
     tty: true
     ports:
